--- a/index.html
+++ b/index.html
@@ -1147,6 +1147,18 @@ const partButtons = document.querySelectorAll('.part-btn');
 
 const currentPartNameEl = document.getElementById('current-part-name');
 
+partButtons.forEach(btn => {
+  btn.addEventListener('click', async ()=>{
+    currentPart = btn.dataset.part;   // 🔥 현재 선택한 종목 저장
+    currentPartNameEl.textContent = currentPart;
+    partScreen.style.display = 'none';
+    exerciseScreen.style.display = 'block';
+
+    // Firestore에서 해당 종목 불러오기
+    await loadExercises(currentPart);
+  });
+});
+
 
 
    
@@ -1160,8 +1172,38 @@ function openExerciseDetail(name){
   document.getElementById('exercise-detail-screen').style.display = 'block';
 }
 
+// 입력창 닫기
+function closeExerciseDetail(){
+  document.getElementById('exercise-detail-screen').style.display = 'none';
+}
 
 
+
+
+async function loadExercises(part){
+  currentPart = part;
+
+  // 🔥 로컬에 캐시가 있으면 즉시 렌더
+  if(accRecordsByExercise[part]){
+    currentExercises = accRecordsByExercise[part];
+    renderExercises(); // 즉시 화면 렌더링
+  } else {
+    // 처음 불러오는 경우
+    currentExercises = [];
+    renderExercises(); // 빈 상태 렌더 (선택 사항)
+  }
+
+  // Firestore fetch
+  const user = auth.currentUser;
+  if(user){
+    const ref = db.collection('users').doc(user.uid)
+                  .collection('accessories').doc(part);
+    const snap = await ref.get();
+    accRecordsByExercise[part] = snap.exists ? snap.data().list || [] : [];
+    currentExercises = accRecordsByExercise[part];
+    renderExercises(); // fetch 완료 후 화면 다시 렌더
+  }
+}
 
 
 
@@ -1441,8 +1483,6 @@ googleLoginBtn.addEventListener('click', ()=>{
 });
 logoutBtn.addEventListener('click', ()=> auth.signOut());
 
-
-   
 auth.onAuthStateChanged(async user => {
   if (user) {
     googleLoginBtn.style.display = 'none';
@@ -1500,9 +1540,15 @@ try {
     });
   });
 
-}catch (e) {
-      console.error('load threeRM err', e);
-    }
+  // 👉 첫 종목 자동 선택
+  const firstExercise = Object.keys(accRecordsByExercise)[0];
+  if (firstExercise) {
+    currentExerciseName = firstExercise;
+    renderAccessoryRecords(); // 화면에 바로 뿌림
+  }
+} catch (e) {
+  console.error('accessory record load error', e);
+}
 
 
     /* 🔥 달력 데이터 로드 (여기로!) */
@@ -1523,8 +1569,12 @@ try {
       console.error("calendar load error", e);
     }
 
+  } else {
+    googleLoginBtn.style.display = 'block';
+    logoutBtn.style.display = 'none';
+    userInfo.textContent = '';
   }
-  });
+});
 
 
 
@@ -1905,7 +1955,17 @@ threeToggleBtn.addEventListener("click", () => {
       ? "block"
       : "none";
 });
-
+// 🔥 종목별 기록 (로컬 전용)
+const accessoryRecords = {
+  // 예시 구조
+  // "체스트프레스": {
+  //   "2026.01.24": [
+  //     { weight: 20, reps: 5 },
+  //     { weight: 30, reps: 4 }
+  //   ]
+  // }
+};
+let currentExercise = null;
 
 
 
@@ -1914,6 +1974,11 @@ threeToggleBtn.addEventListener("click", () => {
    
 
 
+   
+function closeExerciseDetail() {
+  document.getElementById('exercise-detail-screen').style.display = 'none';
+  document.getElementById('exercise-screen').style.display = 'block';
+}
 
 
 function getToday() {
@@ -1936,7 +2001,22 @@ function getToday() {
 
 
 
+function renderAccessoryRecords() {
+  const wrap = document.getElementById('acc-records');
+  const list = accRecordsByExercise[currentExerciseName] || [];
 
+  if (list.length === 0) {
+    wrap.innerHTML = `<div style="color:#777; font-size:13px;">기록 없음</div>`;
+    return;
+  }
+
+  wrap.innerHTML = list.map(set => `
+    <div class="record-day">
+      <div class="date">${set.date}</div>
+      <div class="set">${set.weight}kg × ${set.reps}회</div>
+    </div>
+  `).join('');
+}
 
 
    
@@ -1948,6 +2028,10 @@ function getAccessorySummary(name) {
   return `${latest.date} → ${latest.weight}kg × ${latest.reps}회`;
 }
 
+function renderAccessorySets(name) {
+    currentExerciseName = name;
+    renderAccessoryRecords();
+}
 
 async function addAccessorySet() {
   if (!currentExerciseName) return;
@@ -1972,9 +2056,77 @@ async function addAccessorySet() {
 }
 
 
+   
+// 🔥 보조운동 세트 Firestore 저장
+
+   
+async function loadAccessorySets(exerciseName) {
+  const user = auth.currentUser;
+  if (!user) return;
+
+  try {
+    const snap = await db
+      .collection('users')
+      .doc(user.uid)
+      .collection('accessoryRecords')
+      .doc(exerciseName)
+      .collection('sets')
+      .orderBy('createdAt', 'desc')
+      .get();
+
+    accRecordsByExercise[exerciseName] = snap.docs.map(doc => doc.data());
+
+    renderAccessoryRecords();
+  } catch (e) {
+    console.error('loadAccessorySets error', e);
+  }
+}
 
 
 
+function renderAccessoryRecords(){
+  const wrap = document.getElementById('acc-records');
+  const list = accRecordsByExercise[currentExerciseName] || [];
+
+  if(list.length === 0){
+    wrap.innerHTML = '';
+    return;
+  }
+
+  wrap.innerHTML = `
+    <div class="record-day">
+      <div class="date">${list[0].date}</div>
+      ${list.map(r=>`
+        <div class="set">${r.weight}kg × ${r.reps}회</div>
+      `).join('')}
+    </div>
+  `;
+}
+
+
+
+
+
+function deleteExercise(name, event) {
+    if (event) event.stopPropagation(); // 이벤트가 있으면 막기
+
+    const user = auth.currentUser;
+    if (!user) return fadeTempMsg(exerciseListEl, "로그인 후 사용 가능", 1000);
+
+    currentExercises = currentExercises.filter(n => n !== name);
+    renderExercises();
+
+    try {
+        db.collection('users').doc(user.uid)
+  .collection('accessoryRecords')
+  .doc(currentExerciseName)
+  .set({ records: accRecordsByExercise[currentExerciseName] });
+
+    } catch (err) {
+        console.error("Firestore 삭제 실패:", err);
+        fadeTempMsg(exerciseListEl, "삭제 실패: " + err.message, 1500);
+    }
+}
 
 
    
@@ -2006,15 +2158,48 @@ tabBtns.forEach(btn => {
     }
   });
 });
+document.querySelectorAll('.delete-btn').forEach(btn => {
+  btn.addEventListener('click', (e) => {
+    const name = btn.closest('.exercise-card').id.replace('card-', '');
+    deleteExercise(name, e);
+  });
+});
+
+
+   
+function saveAccessoryRecords() {
+    localStorage.setItem('accRecordsByExercise', JSON.stringify(accRecordsByExercise));
+}
+
+window.addEventListener('load', ()=>{
+    const savedAcc = localStorage.getItem('accRecordsByExercise');
+    if(savedAcc){
+        accRecordsByExercise = JSON.parse(savedAcc);
+        // 화면에 렌더링
+        if(currentExerciseName) renderAccessorySets(currentExerciseName);
+    }
+});
 
 
 
+// ===============================
+// 🔥 카드 기록 동기화 (Firestore)
+// ===============================
+async function saveAccessoryRecords() {
+  const user = auth.currentUser;
+  if (!user || !currentPart) return;
 
-
-
-
-
-
+  try {
+    await db.collection('users')
+      .doc(user.uid)
+      .collection('accessories')
+      .doc(currentPart)
+      .set({ list: accRecordsByExercise[currentPart] });
+    console.log('Accessory Records 저장 완료');
+  } catch (err) {
+    console.error('Accessory Records 저장 실패:', err);
+  }
+}
 
 // 카드 렌더링
 function renderExercises() {
@@ -2059,7 +2244,14 @@ currentExercises = currentExercises.filter(item => item && (typeof item === 'str
       openExerciseDetail(name);
     });
 
-
+    // 삭제 버튼 클릭
+    const delBtn = card.querySelector('.delete-btn');
+    if (delBtn) {
+      delBtn.addEventListener('click', (e) => {
+        e.stopPropagation(); // 카드 클릭 이벤트 방지
+        deleteExercise(name, e);
+      });
+    }
 
     exerciseListEl.appendChild(card);
   });
@@ -2068,20 +2260,135 @@ currentExercises = currentExercises.filter(item => item && (typeof item === 'str
 
 
 
+// 카드 삭제
+async function deleteExercise(name) {
+  if (!currentPart) return;
+  accRecordsByExercise[currentPart] = accRecordsByExercise[currentPart].filter(n => n !== name);
+  currentExercises = accRecordsByExercise[currentPart];
+  renderExercises();
+
+  await saveAccessoryRecords(); // 🔥 Firestore 저장
+}
+
+// 카드 입력창 열기
+function openExerciseDetail(name) {
+  currentExerciseName = name;
+
+  if(!accRecordsByExercise[name]){
+      accRecordsByExercise[name] = [];
+  }
+
+  document.getElementById('exercise-screen').style.display = 'none';
+  document.getElementById('exercise-detail-screen').style.display = 'block';
+  document.getElementById('detail-exercise-name').textContent = name;
+
+  renderAccessoryRecords(); // 해당 종목 기록 렌더
+}
 
 
+// 카드 입력창 닫기
+function closeExerciseDetail() {
+  document.getElementById('exercise-detail-screen').style.display = 'none';
+}
 
+// Firestore에서 기록 불러오기
+async function loadExercises(part) {
+  currentPart = part;
 
+  // 로컬 캐시가 있으면 먼저 렌더
+  if (accRecordsByExercise[part]) {
+    currentExercises = accRecordsByExercise[part];
+    renderExercises();
+  } else {
+    currentExercises = [];
+    renderExercises();
+  }
+
+  // Firestore fetch
+  const user = auth.currentUser;
+  if (user) {
+    const ref = db.collection('users').doc(user.uid).collection('accessories').doc(part);
+    const snap = await ref.get();
+    accRecordsByExercise[part] = snap.exists ? snap.data().list || [] : [];
+    currentExercises = accRecordsByExercise[part];
+    renderExercises();
+  }
+}
+
+// 종목 버튼 클릭 시 Firestore 불러오기
+partButtons.forEach(btn => {
+  btn.addEventListener('click', async () => {
+    currentPart = btn.dataset.part;
+    currentPartNameEl.textContent = currentPart;
+    partScreen.style.display = 'none';
+    exerciseScreen.style.display = 'block';
+    await loadExercises(currentPart); // 🔥 여기서 동기화
+  });
+});
 
 const backBtn = document.getElementById('exercise-back-btn'); // 뒤로가기 버튼 ID
+if (backBtn) {
+    backBtn.addEventListener('click', closeExerciseDetail);
+}
+// 맨 위 또는 index.js 적절한 위치
+function createExerciseCard(exerciseName) {
+    const card = document.createElement('div');
+    card.classList.add('exercise-card');
+    card.textContent = exerciseName;
+    document.getElementById('exercise-list').appendChild(card);
+}
 
+function closeExerciseDetail() {
+  const detail = document.getElementById('exercise-detail-screen');
+  const exerciseScreen = document.getElementById('exercise-screen');
+  const partScreen = document.getElementById('acc-part-screen');
 
-
-
-
+  if(detail.style.display !== 'none'){
+    detail.style.display = 'none';
+    exerciseScreen.style.display = 'block';
+  } else {
+    // 이미 상세 화면이 아닌 경우, 파트 화면으로
+    exerciseScreen.style.display = 'none';
+    partScreen.style.display = 'block';
+  }
+}
+document.addEventListener('keydown', (e) => {
+  if(e.key === "Escape") closeExerciseDetail();
+});
+window.addEventListener('load', ()=>{
+    const savedAcc = localStorage.getItem('accRecordsByExercise');
+    if(savedAcc){
+        accRecordsByExercise = JSON.parse(savedAcc);
+        // 화면에 렌더링
+        if(currentExerciseName) renderAccessoryRecords(currentExerciseName); // ✅ 변경
+    }
+});
 
 // ====================== 새로고침 기록 유지 ======================
+window.addEventListener('load', async () => {
+    // 1. localStorage에서 불러오기
+    const savedAcc = localStorage.getItem('accRecordsByExercise');
+    if (savedAcc) {
+        accRecordsByExercise = JSON.parse(savedAcc);
+    }
 
+    // 2. 첫 번째 파트와 종목 자동 선택
+    const parts = Object.keys(accRecordsByExercise);
+    if (parts.length > 0) {
+        currentPart = parts[0];
+        currentExercises = accRecordsByExercise[currentPart] || [];
+        currentExerciseName = currentExercises[0] ? (currentExercises[0].name || currentExercises[0]) : null;
+
+        renderExercises();
+        if (currentExerciseName) renderAccessoryRecords();
+    }
+
+    // 3. Firestore에서 불러오기 (로그인 되어있으면)
+    const user = auth.currentUser;
+    if (user && currentPart) {
+        await loadExercises(currentPart);
+    }
+});
 
 async function saveExerciseToDB(exerciseName) {
     const user = auth.currentUser;
@@ -2118,113 +2425,16 @@ async function addAccessorySetToDB(exerciseName, weight, reps) {
 }
 
 
-/*************************************************
- * ✅ Accessory Card 최소 안정 버전 (Firestore Only)
- *************************************************/
-
-
-/* 1️⃣ 로그인 시 카드 기록 로드 */
-auth.onAuthStateChanged(async user => {
-  if (!user) return;
-
-  accRecordsByExercise = {};
-
-  const snap = await db
-    .collection('users')
-    .doc(user.uid)
-    .collection('accessoryRecords')
-    .get();
-
-  snap.forEach(doc => {
-    accRecordsByExercise[doc.id] = doc.data().sets || [];
-  });
-
-  renderExerciseCards();
-});
-
-/* 2️⃣ 종목 카드 렌더 */
-function renderExerciseCards() {
-  const container = document.getElementById('tipCards');
-   if (!container) return; // 🔥 없으면 그냥 중단
-  container.innerHTML = '';
-
-  Object.keys(accRecordsByExercise).forEach(name => {
-    const div = document.createElement('div');
-    div.className = 'exercise-card';
-    div.textContent = name;
-    div.onclick = () => openExercise(name);
-    container.appendChild(div);
-  });
-}
-
-/* 3️⃣ 카드 클릭 → 기록 표시 */
-function openExercise(name) {
-  currentExerciseName = name;
-
-  const list = document.getElementById('tipRecordList');
-  list.innerHTML = '';
-
-  const sets = accRecordsByExercise[name] || [];
-
-  if (sets.length === 0) {
-    list.innerHTML = '<div>기록 없음</div>';
-    return;
-  }
-
-  sets.forEach(s => {
-    const div = document.createElement('div');
-    div.textContent = `${s.date}  ${s.weight}kg × ${s.reps}회`;
-    list.appendChild(div);
-  });
-}
-
-/* 4️⃣ 기록 저장 */
-async function saveTipRecord(weight, reps) {
-  if (!currentExerciseName) return alert('종목 선택');
-
-  const user = auth.currentUser;
-  if (!user) return;
-
-  const record = {
-    date: new Date().toLocaleDateString('ko-KR'),
-    weight,
-    reps,
-    createdAt: firebase.firestore.FieldValue.serverTimestamp()
-  };
-
-  const ref = db
-    .collection('users')
-    .doc(user.uid)
-    .collection('accessoryRecords')
-    .doc(currentExerciseName);
-
-  await ref.set({
-    sets: firebase.firestore.FieldValue.arrayUnion(record)
-  }, { merge: true });
-
-  // 메모리 갱신
-  accRecordsByExercise[currentExerciseName] =
-    accRecordsByExercise[currentExerciseName] || [];
-  accRecordsByExercise[currentExerciseName].push(record);
-
-  openExercise(currentExerciseName);
-}
-
-/* 5️⃣ 종목 추가 */
-async function addExercise(name) {
-  const user = auth.currentUser;
-  if (!user) return;
-
-  accRecordsByExercise[name] = [];
-
-  await db
-    .collection('users')
-    .doc(user.uid)
-    .collection('accessoryRecords')
-    .doc(name)
-    .set({ sets: [] });
-
-  renderExerciseCards();
+async function loadExercisesFromDB() {
+    const user = auth.currentUser;
+    if (!user) return;
+    const snapshot = await db.collection('users').doc(user.uid).collection('accessories').get();
+    accRecordsByExercise = {}; // 초기화
+    snapshot.forEach(doc => {
+        const name = doc.id;
+        accRecordsByExercise[name] = []; // 기록은 나중에 불러올 수 있음
+        createExerciseCard(name);
+    });
 }
 
 
